styles.css
body {
    align-items: stretch;
    display: flex;
    background: linear-gradient(-70deg, #b8bb26, #83a598,#fe8019);
	background-size: 300%;
    animation: move-gradient 20s ease infinite;
}

@keyframes move-gradient {
	0% {
		background-position: 0%;
	}
	50% {
		background-position: 10%;
	}
	100% {
		background-position: 0%;
	}
}

#terminal-box {
    background-color: #1d2021;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    margin: 16px;
    padding: 16px;
    width: 100%;
    overflow-y: auto;
    scroll-behavior: smooth;
}

.upper-section-box {
    display: flex;
    flex-direction: row;
    background-color: #3c3836;
    border-radius: 4px;
    color: #8ea598;
    padding: 4px;
    margin-bottom: 16px;
}

.lower-section-box {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.terminal-query {
    background-color: #282828;
    border-radius: 4px;
    color: #8ec07c;
    font-family: "Cascadia Code";
    font-size: 14px;
    margin: 4px;
    overflow-wrap: anywhere;
    padding: 8px;
}

.terminal-response {
    background-color: #282828;
    border-radius: 4px;
    color: #8ea598;
    font-family: "Cascadia Code";
    font-size: 14px;
    margin: 4px;
    overflow-wrap: anywhere;
    padding: 8px;
}

.link {
    color: #458588;
}

.ticker {
    background-color: #3c3836;
    border-radius: 4px;
    color: #8ea598;
    font-family: "Cascadia Code";
    font-size: 14px;
    margin: 4px;
    padding: 8px;
    width: 20px;
}

